--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
                                 <i class="fa-regular fa-user"></i> Cuenta
                             </a>
                             <ul class="dropdown-menu dropMenu">
-                                <li><a class="dropdown-item contenedorInactivo" id="cerrarSesion" href="#">Cerrar Sesion</a></li>
+                                <li><a class="dropdown-item contenedorInactivo" id="cerrarSesion" href="#">Cerrar
+                                        Sesion</a></li>
                             </ul>
                         </li>
                     </ul>
